--- a/CompanyWebSite/Views/Shared/_Head.cshtml
+++ b/CompanyWebSite/Views/Shared/_Head.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- 公共头部导航 start -->
 <section class="public-header">
     <a class="hd-logo-link" href="@Url.Action("Index","Home")">
-        <img class="hd-logo-img" src="@Model.SystemInfo.LogoUrl" alt="">
+        <img class="hd-logo-img" src="@Model.SystemInfo.LogoUrl" alt="" style="width: 131px;">
     </a>
     <div class="hd-r">
         <div class="hd-nav">
