--- a/CompanyWebSite/Views/Home/Index.cshtml
+++ b/CompanyWebSite/Views/Home/Index.cshtml
@@ -321,7 +321,7 @@
                             <p class="item-p">HTML5</p>
                             <p class="item-p">CSS3</p>
                             <div class="item-btn">
-                                <a href="case.html" target="_blank">查看精品案例</a>
+                                <a href="@Url.Action("Index","Case")" target="_blank">查看精品案例</a>
                             </div>
                         </li>
                         <li class="server-item animated hide" data-ani-name="fadeIn" data-ani-delay=".4s">
@@ -491,7 +491,7 @@
                                 <p class="item-p">运营数据分析工具</p>
                             </div>
                             <div class="item-btn">
-                                <a href="" target="_blank">了解更多</a>
+                                <a href="@Url.Action("Marketing","WebSiteBuild")" target="_blank">了解更多</a>
                             </div>
                         </li>
                         <li class="plan-item animated hide" data-ani-name="fadeInLeft" data-ani-delay=".4s">
@@ -506,7 +506,7 @@
                                 <p class="item-p">经营数据分析工具</p>
                             </div>
                             <div class="item-btn">
-                                <a href="" target="_blank">了解更多</a>
+                                <a href="@Url.Action("DirSir","WebSiteBuild")" target="_blank">了解更多</a>
                             </div>
                         </li>
                         <li class="plan-item animated hide" data-ani-name="fadeInRight" data-ani-delay=".4s">
@@ -521,7 +521,7 @@
                                 <p class="item-p">运营数据分析</p>
                             </div>
                             <div class="item-btn">
-                                <a href="" target="_blank">了解更多</a>
+                                <a href="@Url.Action("Classic","WebSiteBuild")" target="_blank">了解更多</a>
                             </div>
                         </li>
                         <li class="plan-item animated hide" data-ani-name="fadeInRight" data-ani-delay=".8s">
@@ -537,7 +537,7 @@
                                 <p class="item-p">企业邮箱</p>
                             </div>
                             <div class="item-btn">
-                                <a href="" target="_blank">了解更多</a>
+                                <a href="@Url.Action("Dress","WebSiteBuild")" target="_blank">了解更多</a>
                             </div>
                         </li>
                     </ul>
@@ -695,22 +695,23 @@
                     </ul>
                     <div class="sale-body">
                         <div class="body-title">让我们的顾问联系您</div>
-                        <form class="body-form" action="">
+                        <form id="bottom_form" class="body-form" id="bottom_form" action="#" onsubmit="return verification();">
                             <div class="form-group">
                                 <div class="form-row">
                                     <label class="label">手机号</label>
-                                    <input class="inp-mobile" type="tel" name="mobile" value="">
+                                    <input class="inp-mobile" type="tel" name="connect" maxlength="11">
                                 </div>
                                 <div class="form-row">
                                     <label class="label">验证码</label>
                                     <input class="inp-verify" type="text" name="verify">
-                                    <a href="javascript:void(0);">
-                                        <img class="verify-img" src="/images/public/yzm_null.jpg">
-                                    </a>
-                                </div>
 
+                                    @*<a href="javascript:void(0);">
+                <img class="verify-img" src="/images/public/yzm_null.jpg" id="verification">
+            </a>*@
+                                </div>
+                                <div id="v_container" style="display: inline-block;margin-right: 30px;"></div>
                                 <div class="form-row">
-                                    <button class="form-btn" type="button" class="inp-btn">立即联系我</button>
+                                    <button class="form-btn" type="submit" class="inp-btn">立即联系我</button>
                                 </div>
                             </div>
                         </form>
@@ -736,17 +737,49 @@
         <script src="https://cdn.bootcss.com/vue/2.5.18-beta.0/vue.min.js"></script>
         <script src="/layui/layui.js"></script>
         <script src="https://cdn.bootcss.com/vue/2.5.21/vue.min.js"></script>
+        <script src="js/gVerify.js"></script>
         <script>
             var dataDto = JSON.parse('@Html.Raw(dataStr)');
             //当前选择导航页设置
-            $('.nav-list .nav-item').each(function (i, v) {
+            $('.nav-list .nav-item').each(function(i, v) {
                 if ($(v).data("index") === dataDto.index) {
                     $(v).addClass("cur");
                 }
-            })
+            });
             //修改图片尺寸
             $("#logo").css("width", "150px");   //修改尺寸
             $("#weChatQR").css("width", "130px");   //修改二维码尺寸
+
+            //验证码
+            var verifyCode = new GVerify({
+                id: "v_container",
+                type: "number"
+            });
+
+            //表单验证
+            function verification() {
+                var verify = $("[name='verify']").val();
+                var connect = $("[name='connect']").val();
+                if (verifyCode.validate(verify) && !$.isEmptyObject(connect) && connect.length == 11) {
+                    $.post('@Url.Action("AddCooper","Cooper")', { contact: connect}, function(data,status) {
+                        if (data.data == 1) {
+                            window.alert("提交成功！请等待我们联系您！");
+                            $("#bottom_form")[0].reset();
+                        } else {
+                            window.alert("提交失败！");
+                        }
+                    });
+                } else {
+                    window.alert("验证码错误");
+                };
+                return false;
+            }
+
+            $("#bottom_form").submit(function(data) {
+                console.log(data);
+            });
+
+            
 
             layui.use(['form','jquery','layer'], function () {
             var form = layui.form;
@@ -779,6 +812,9 @@
                     $("#rightItem").append(rightItem);
                 }
             });
+
+            //图片验证码
+            
 
             //提交合作意向表单
             form.on("submit(commit)", function (data) {
