--- a/CompanyWebSite/Views/Mobile/web.cshtml
+++ b/CompanyWebSite/Views/Mobile/web.cshtml
@@ -8,6 +8,8 @@
         // 设置为驼峰命名
         ContractResolver = new CamelCasePropertyNamesContractResolver()
     };
+    var js = Model.SystemInfo.ExteriorJs;
+    Model.SystemInfo.ExteriorJs = "";
     var dataStr = JsonConvert.SerializeObject(Model, Formatting.None, serializerSettings);
 }
 <!DOCTYPE html>
@@ -17,7 +19,7 @@
     <meta name="keywords" content="@Model.SystemInfo.KeyWords" /><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>经典型网站 - 格莱软件</title>
+    <title>手机网站 - 格莱软件</title>
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/mobile.css">
     <link href="/layui/css/layui.css" rel="stylesheet" />
@@ -201,7 +203,7 @@
     @Html.Partial("_Help")
     <!-- 公共底部 start -->
     @Html.Partial("_Bottom")
-    <!-- 公共底部 end -->
+    <!-- 公共底部 end -->@Html.Raw(js);
 
     <script src="/assets/jquery1.11.2.js"></script>
     <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.js"></script>
