美华按钮颜色，修复几个链接。

--- a/CompanyWebSite/Views/Home/Index.cshtml
+++ b/CompanyWebSite/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
                                     &nbsp;&nbsp; 实现企业数字化运营
                                 </p>
                                 <div class="banner-btn ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="2s" swiper-animate-delay=".6s">
-                                    <a href="" target="_blank">在线咨询</a>
+                                    <a href="" target="_blank" style="color:#FFFFFF">在线咨询</a>
                                 </div>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                                 </h3>
                                 <p class="banner-desc ani" swiper-animate-effect="fadeIn" swiper-animate-duration="2s" swiper-animate-delay=".4s">管家式服务，解决企业最后一公里问题，售后长期稳定无忧</p>
                                 <div class="banner-btn ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="2s" swiper-animate-delay=".6s">
-                                    <a href="" target="_blank">在线咨询</a>
+                                    <a href="" target="_blank" style="color:#FFFFFF">在线咨询</a>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                                     &nbsp; 个性定制 &nbsp; 覆盖全网终端
                                 </p>
                                 <div class="banner-btn ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="2s" swiper-animate-delay=".8s">
-                                    <a href="" target="_blank">在线咨询</a>
+                                    <a href="" target="_blank" style="color:#FFFFFF">在线咨询</a>
                                 </div>
                             </div>
                         </div>
@@ -174,7 +174,7 @@
                     <p class="item-p">与访问者无缝沟通</p>
                     <p class="item-p">PC、手机多端覆盖</p>
                     <div class="item-more">
-                        <a href="type-classical.html" target="_blank">了解更多</a>
+                        <a href="@Url.Action("Classic","WebSiteBuild")" target="_blank">了解更多</a>
                     </div>
                 </li>
                 <li class="type-item animated hide" data-ani-name="fadeInLeft" data-ani-delay=".3s">
@@ -189,7 +189,7 @@
                     <p class="item-p">可视化管理后</p>
                     <p class="item-p">可跟踪推广效果</p>
                     <div class="item-more">
-                        <a href="type-yingxiao.html" target="_blank">了解更多</a>
+                        <a href="@Url.Action("Marketing","WebSiteBuild")" target="_blank">了解更多</a>
                     </div>
                 </li>
                 <li class="type-item animated hide" data-ani-name="fadeIn" data-ani-delay=".3s">
@@ -203,7 +203,7 @@
                     <p class="item-p">支持行业功能定制</p>
                     <p class="item-p">灵活组合</p>
                     <div class="item-more">
-                        <a href="type-xiangy.html" target="_blank">了解更多</a>
+                        <a href="@Url.Action("Responsetype","WebSiteBuild")" target="_blank">了解更多</a>
                     </div>
                 </li>
                 <li class="type-item animated hide" data-ani-name="fadeInRight" data-ani-delay=".3s">
@@ -217,7 +217,7 @@
                     <p class="item-p">支持兑换券和礼品</p>
                     <p class="item-p">会员精细化运营</p>
                     <div class="item-more">
-                        <a href="type-dians.html" target="_blank">了解更多</a>
+                        <a href="@Url.Action("DirSir","WebSiteBuild")" target="_blank">了解更多</a>
                     </div>
                 </li>
                 <li class="type-item animated hide" data-ani-name="fadeInRight" data-ani-delay=".3s">
@@ -232,7 +232,7 @@
                     <p class="item-p">国际社交平台分享</p>
                     <p class="item-p">在线商机收集功能</p>
                     <div class="item-more">
-                        <a href="type-waimao.html" target="_blank">了解更多</a>
+                        <a href="@Url.Action("Dress","WebSiteBuild")" target="_blank">了解更多</a>
                     </div>
                 </li>
             </ul>
